<resources>
    <string name="app_name">The-Health-Care-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consultation_confirm_text">ဆရာဝန်နှင့်တိုင်ပင်ဆွေးနွေးရန် consultation broadcast ပြုလုပ်မှာသေချာပါသလား။</string>
    <string name="btn_dialog_cancel">မလုပ်တော့ပါ။</string>
    <string name="btn_dialog_sure">သေချာပါသည်။</string>
    <string name="text_speciality_name">ဆရာဝန်နှင့်တိုင်ပင်ဆွေးနွေးရန် consultation broadcast ပြုလုပ်မှာသေချာပါသလား။</string>
    <string name="text_weight_blood">သွေးပေါင်ချိန်</string>
    <string name="txt_weight">ပေါင်ချိန်</string>
    <string name="txt_wrong_medicine">မတည့်သောဆေး</string>
    <string name="text_birthday">မွေးနေ့</string>
    <string name="text_height">အရပ်</string>
    <string name="text_blood_type">သွေးအမျိုးအစား</string>
    <string name="txt_hint">မတည့်သောဆေးများရှိလျှင်ချရေးပါ။</string>
    <string name="text_contine">ဆက်ရန်</string>
    <string name="text_patient_name">လူနာအမည်</string>ည်
    <string name="text_confirm_consultation">ချိန်းဆိုမှု ပြုလုပ်မည်</string>
    <string name="text_app_name">The CareMM</string>
    <string name="patient_info">လူနာအချက်အလက်များဖြည့်ပါ</string>
    <string name="text_type_of_disease">ရောဂါအမျိုးအစားများ</string>
    <string name="text_confirm_summary">အချက်အလက်များအား အတည်ပြုပေးပါ</string>
    <string name="text_question_special">ရောဂါဆိုင်ရာမေးခွန်းများ</string>
    <string name="consultatioin_received">ဆွေးနွေးမှု ပြုလုပ်ရန်  </string>
    <string name="consultatioin_receivedTwo">မှ လက်ခံထား ပါသည်။ </string>
    <string name="sfd">ဆွေးနွေးမှု ပြုလုပ်နိုင်ပါပြီ</string>
    <string name="varb">သည်</string>
    <string name="txt_made_payment">ငွေပေးချေမည်</string>
    <string name="payment_description">ငွေပေးချေမှု အတည်ပြုပြီး နောက်တစ်ရက်မှ စတင်၍ ဆေး များကို လိုက်လံပို့ဆောင်မည် ဖြစ်ပါသည် ။</string>
    <string name="txt_address">လိပ်စာ</string>


    <string name="totalMMk">Total(MMK)</string>
    <string name="enter_full_address">Enter Full Address</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="subtotal">Subtotal</string>
    <string name="paymenet_desc">ငွေ​ပေး​ချေမှု အတည်ပြုပြီး ​နောက်တစ်ရက်မှ စတင်၍ ​ဆေးများကို လိုက်လံပို့​ဆောင်မည်ဖြစ်ပါသည်။</string>
    <string name="made_payment">ငွေ​ပေး​ချေမည်</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="number">အ​ရေအတွက်</string>
    <string name="order_txt">မှာမည်။</string>
    <string name="township">ြမို့နယ်</string>
    <string name="state_txt">တိုင်းြပည်</string>
    <string name="new_address">လိပ်စာအသစ်</string>
    <string name="choose_address">လိပ်စာရေွးချယ်ပါ။</string>
    <string name="address">လိပ်စာ</string>
    <string name="prescribe_txt">ဆေးအညွှန်း</string>

    <string-array name="stepsLables">
        <item>အထွေထွေမေးခွန်းများ</item>
        <item>ရောဂါဆိုင်ရာမေးခွန်းများ</item>
    </string-array>

    <string-array name="bloodType">
        <item>A သွေး</item>
        <item>B သွေး</item>
        <item>O သွေး</item>
    </string-array>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="years">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="states">
        <item>Yangon</item>
        <item>Mandalay</item>
        <item>Kachin</item>
        <item>Shan</item>
        <item>Mon</item>
        <item>Kayin</item>
        <item>Chin</item>
        <item>Bago</item>
        <item>Sagaing</item>
        <item>Tanintharyi</item>
    </string-array>

    <string-array name="townships">
        <item>Ahlone</item>
        <item>Hlaing</item>
        <item>Maubin</item>
        <item>Taungoo</item>
        <item>Falam</item>
        <item>Taunggyi</item>
        <item>Myeik</item>
        <item>Hpapun</item>
        <item>Mawlamyine</item>
        <item>Mogoke</item>
    </string-array>

</resources>