<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/pNameQauestionINSecond"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:padding="@dimen/margin_small"
            android:text="လူနာအမည်" />

        <TextView
            android:id="@+id/etNameInChat"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:padding="@dimen/margin_small"
            android:text="aung aung" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvbirthdayQuestionInSecond"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:padding="@dimen/margin_small"
            android:text="@string/text_birthday" />

        <TextView
            android:id="@+id/etBdInChat"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_weight="1"
            android:padding="@dimen/margin_small"
            android:text="aung aung" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvheightQuestionInSecond"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:padding="@dimen/margin_small"
            android:text="@string/text_height" />

        <TextView
            android:id="@+id/etHeightInChat"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_weight="1"
            android:padding="@dimen/margin_small"
            android:text="aung aung" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvbloodTypeQuestionInSecond"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:padding="@dimen/margin_small"
            android:text="@string/text_blood_type" />

        <TextView
            android:id="@+id/etbloodTypeInChat"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margin_small"
            android:text="aung aung" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvWrngQuestionInSecond"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:text="@string/txt_wrong_medicine" />

        <TextView
            android:id="@+id/etwrongInChat"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="aung aung" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvWeight"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:text="@string/txt_weight" />

        <TextView
            android:id="@+id/etWeightInChat"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="aung aung" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvBloodPressure"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:text="@string/text_weight_blood" />

        <TextView
            android:id="@+id/etBloodPressureinChat"
            style="@style/textDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="aung aung" />
    </LinearLayout>

</LinearLayout>