<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PatientCaseSummaryConfirmActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="3sp"
        app:title="@string/patient_info"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        style="@style/Toolbar.TitleText"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/patient_case_saummary_confirmation"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        />
    <org.mmtextview.components.MMTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#424656"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="3sp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_confirm_summary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="3sp"
        android:text="လူနာအချက်အလက်များ"
        android:layout_gravity="center"
        android:padding="@dimen/margin_medium"
        android:background="@drawable/rounded_corner_button"
        android:layout_marginTop="@dimen/margin_large"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="27dp"
            android:layout_marginStart="27dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/margin_medium"
                >
                <TextView
                    android:id="@+id/pNameQauestionInConfirm"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/testDesignInQuestion"
                    android:padding="@dimen/margin_small"
                    android:text="@string/text_patient_name"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/pNameInConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="aung aung"
                    android:padding="@dimen/margin_small"
                    style="@style/testDesignInQuestion"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/margin_medium"
                >
                <TextView
                    android:id="@+id/tvbirthdayQuestionInConfirm"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/testDesignInQuestion"
                    android:padding="@dimen/margin_small"
                    android:text="@string/text_birthday"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tvbdAnswerInConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="aung aung"
                    android:padding="@dimen/margin_small"
                    style="@style/testDesignInQuestion"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/margin_medium"
                >
                <TextView
                    android:id="@+id/tvheightQuestionInConfirm"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_height"
                    android:padding="@dimen/margin_small"
                    style="@style/testDesignInQuestion"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/etheigtAnswerInConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="aung aung"
                    android:padding="@dimen/margin_small"
                    style="@style/testDesignInQuestion"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/margin_medium"
                >
                <TextView
                    android:id="@+id/tvbloodTypeQuestionInConfirm"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_blood_type"
                    android:padding="@dimen/margin_small"
                    style="@style/testDesignInQuestion"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/etbloodTypeAnswerInConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="aung aung"
                    android:padding="@dimen/margin_small"
                    style="@style/testDesignInQuestion"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/margin_medium"
                >
                <TextView
                    android:id="@+id/tvWeightInConFirm"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_weight"
                    android:padding="@dimen/margin_small"
                    style="@style/testDesignInQuestion"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/etWeightInConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="aung aung"
                    android:padding="@dimen/margin_small"
                    style="@style/testDesignInQuestion"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/margin_medium"
                >
                <TextView
                    android:id="@+id/tvBloodPressureInConfirm"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_weight_blood"
                    android:padding="@dimen/margin_small"
                    style="@style/testDesignInQuestion"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/etBloodPressureInConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="aung aung"
                    android:padding="@dimen/margin_small"
                    style="@style/testDesignInQuestion"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/margin_medium"
                >
                <TextView
                    android:id="@+id/tvWrngQuestionInConfirm"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_wrong_medicine"
                    style="@style/testDesignInQuestion"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/etwrongInConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="aung aung"
                    style="@style/testDesignInQuestion"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="3sp"
        android:text="@string/text_question_special"
        android:layout_gravity="center"
        android:padding="@dimen/margin_medium"
        android:background="@drawable/rounded_corner_button"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="27dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSpeicalQuestionAndAnswerInConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ချိန်းဆိုမှု ပြုလုပ်မည်"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:iconGravity="end"
        android:background="@color/blue"
        android:layout_gravity="end"
        android:gravity="end"
        android:id="@+id/btnConfirmRequest"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium_2"/>
</LinearLayout>
</ScrollView>